# MtmEx1

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  MtmEx1.code-workspace  VsCode Test.code-workspace  augmented_map.c  augmented_map.h  election.c  election.h  electionTestsExample.c  finalCheck.sh  main.c  makefile  trigger_tests.sh
Dry/: q1.c  q1.h  q1Tester.c  q2.c
election/: augmented_map.c  augmented_map.h  election.c  election.h  readme.md
mtm_map/: map.c  map.h
mtm_map/tests/: map_tests.c
tests/: electionTestsExample.c  map_example_test.c
